# NiSpace

./: .gitattributes  .gitignore  .readthedocs.yaml  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
datasets/: example_abide.py  example_enigma.py  example_happy.py  parcellation.py  prep_example.py  prep_parcellation.py  prep_ref_collections.py  prep_ref_mrna.py  prep_ref_parc_maps.py  prep_template.py  reference_brainmap.py  reference_mrna.py  reference_pet.py  template.py  utils.py  utils_datasets.py
docs/: api.rst  api_ref.rst  citation.rst  conf.py  examples.rst  index.rst  installation.rst  introduction.rst  requirements.txt
docs/nb_examples/: abide.ipynb  drug_challenge.ipynb  enigma.ipynb
docs/nb_introduction/: fetching_datasets.ipynb  nispace_intro.ipynb  spatial_colocalizations.ipynb  workflows.ipynb
nispace/: __init__.py  _version.py  api.py  cv.py  datasets.py  io.py  nulls.py  parcellate.py  plotting.py  utils.py  workflows.py
nispace/datalib/: example.json  parcellation.json  reference.json  reference.txt  template.json
nispace/modules/: colocalize.py  constants.py  permute.py  plot.py  reduce_x.py  transform_y.py
nispace/stats/: coloc.py  effectsize.py  misc.py
nispace/utils/: utils_datasets.py
