[build-system]
requires = ["setuptools", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
name = "NiSpace"
version = "0.0.0"
author = "Leon Lotter"
author_email = "leondlotter@gmail.com"
description = "Neuroimaging Spatial Colocalization Environment"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
url = "https://github.com/LeonDLotter/nispace"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "tqdm>=4.66.4",
    "joblib>=1.2.0",
    "requests>=2.32.3",
    "colorlog>=6.8.2",
    "numba>=0.58.0",
    "numpy>=1.23.0",
    "pandas>=2.0.0",
    "nibabel>=3.2.0",
    "nilearn>=0.10.0",
    "neuromaps>=0.0.5",
    "scipy>=1.6.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.13.0",
]

[tool.setuptools.packages]
find = {}

[tool.setuptools.dynamic]
version = {attr = "nispace.__version__"}

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "nispace/_version.py"
versionfile_build = "nispace/_version.py"
tag_prefix = "v"
parentdir_prefix = ""