[build-system]
requires = ["setuptools", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "nispace"
version = "0.0.1-beta.1"
authors = [
    {name = "Leon D. Lotter", email = "leondlotter@gmail.com"},
]
maintainers = [
    {name = "Leon D. Lotter", email = "leondlotter@gmail.com"},
]
description = "Neuroimaging Spatial Colocalization Environment"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "tqdm>=4.66.4",
    "joblib>=1.2.0",
    "requests>=2.32.3",
    "colorlog>=6.8.2",
    "numba>=0.58.0",
    "numpy>=1.23.0",
    "pandas>=2.0.0",
    "nibabel>=4.0.0",
    "nilearn>=0.10.0",
    "neuromaps>=0.0.5",
    "scipy>=1.6.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.13.0",
]

[project.optional-dependencies]
opt = [
    "brainspace",
    "brainsmash >=0.10.0",
    "factor-analyzer",
    "neuroCombat",
    "neuroHarmonize",
]

[project.urls]
Repository = "https://github.com/LeonDLotter/NiSpace"

[tool.setuptools.packages]
find = {}

[tool.setuptools.dynamic]
version = {attr = "nispace.__version__"}

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "nispace/_version.py"
versionfile_build = "nispace/_version.py"
tag_prefix = "v"
parentdir_prefix = ""